# test-ci-sample

./: .gitignore  README.md  guide.html
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/api/routes/: validate.py
backend/app/domain/: validation.py
backend/tests/: test_validation.py
frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: address-form.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/features/address/: AddressForm.tsx  CompletionScreen.tsx  FormField.tsx  api.ts  validation.test.ts  validation.ts
