[project]
name = "backend"
version = "0.0.0"
description = "Address validation API"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff>=0.4",
    "mypy>=1.11",
]

[tool.uv]
package = false

[tool.ruff]
src = ["app", "tests"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true
files = ["app"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing"
